# ArrivalMicrophone

./: README.md
firmware/: .mxproject  ArrivalMicrophone.cbp  ArrivalMicrophone.files  ArrivalMicrophone.include  ArrivalMicrophone.ioc  CMakeLists.txt  make_files  programm
firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
firmware/FATFS/App/: fatfs.c
firmware/src/: cyclebuffer.c  cyclebuffer.h  i2sreader.c  i2sreader.h  keyboard.c  keyboard.h  led.c  led.h  maintask.c  maintask.h  uartconsole.c  uartconsole.h  uartcyclebuffer.c  uartcyclebuffer.h  wav.c  wav.h  writer.c  writer.h
